refactor: replace `packages` with `apps`
